tests/expectations/compiler/tuple/tuple_in_return_type.out
DCE_ENABLED:
Error [ETYC0372049]: A tuple type cannot contain a tuple.
    --> compiler-test:3:35
     |
   3 |     transition bar(a: u8) -> (u8, (u8, u8)) {
     |                                   ^^^^^^^^
Error [ETYC0372052]: A tuple expression cannot contain another tuple expression.
    --> compiler-test:4:20
     |
   4 |         return (a, (a + a, a * a));
     |                    ^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372049]: A tuple type cannot contain a tuple.
    --> compiler-test:3:35
     |
   3 |     transition bar(a: u8) -> (u8, (u8, u8)) {
     |                                   ^^^^^^^^
Error [ETYC0372052]: A tuple expression cannot contain another tuple expression.
    --> compiler-test:4:20
     |
   4 |         return (a, (a + a, a * a));
     |                    ^^^^^^^^^^^^^^
